--- a/privacypolicynyankittywidget.html
+++ b/privacypolicynyankittywidget.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - NyankittyWidget</title>
+    <title>Privacy Policy - Catsies Clock Widget</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
@@ -43,22 +43,22 @@
     </style>
 </head>
 <body>
-    <h1>Privacy Policy for NyankittyWidget</h1>
-    <p class="last-updated">Last updated: February 1, 2026</p>
+    <h1>Privacy Policy for Catsies Clock Widget</h1>
+    <p class="last-updated">Last updated: February 5, 2026</p>
 
-    <p>Welcome to NyankittyWidget! This privacy policy explains how we collect, use, and protect your information when you use our app.</p>
+    <p>Welcome to Catsies Clock Widget! This privacy policy explains how we collect, use, and protect your information when you use our app.</p>
 
     <h2>Information We Collect</h2>
 
     <h3>Automatically Collected Information</h3>
-    <p>When you use NyankittyWidget, we may automatically collect certain information, including:</p>
+    <p>When you use Catsies Clock Widget, we may automatically collect certain information, including:</p>
     <ul>
         <li><strong>Usage Data:</strong> Information about how you interact with the app, such as features used and time spent in the app.</li>
         <li><strong>Device Information:</strong> Device type, operating system version, and unique device identifiers for analytics purposes.</li>
     </ul>
 
     <h3>Information We Do NOT Collect</h3>
-    <p>NyankittyWidget does not collect:</p>
+    <p>Catsies Clock Widget does not collect:</p>
     <ul>
         <li>Personal identification information (name, email, address)</li>
         <li>Location data</li>
@@ -76,7 +76,7 @@
     </ul>
 
     <h2>Third-Party Services</h2>
-    <p>NyankittyWidget uses the following third-party services that may collect information:</p>
+    <p>Catsies Clock Widget uses the following third-party services that may collect information:</p>
 
     <h3>Google Firebase Analytics</h3>
     <p>We use Firebase Analytics to understand how users interact with our app. Firebase may collect device information and usage data. For more information, please visit <a href="https://firebase.google.com/policies/analytics" target="_blank">Firebase Analytics Privacy Policy</a>.</p>
@@ -88,7 +88,7 @@
     <p>Your app preferences (such as selected frame style and refresh interval) are stored locally on your device. We do not store personal data on external servers.</p>
 
     <h2>Children's Privacy</h2>
-    <p>NyankittyWidget is suitable for users of all ages. We do not knowingly collect personal information from children under 13. The app displays cat images and does not contain any inappropriate content.</p>
+    <p>Catsies Clock Widget is suitable for users of all ages. We do not knowingly collect personal information from children under 13. The app displays cat images and does not contain any inappropriate content.</p>
 
     <h2>Data Security</h2>
     <p>We value your trust and strive to use commercially acceptable means to protect any information. However, no method of transmission over the internet or electronic storage is 100% secure, and we cannot guarantee absolute security.</p>
@@ -107,11 +107,11 @@
     <h2>Contact Us</h2>
     <div class="contact">
         <p>If you have any questions or concerns about this Privacy Policy, please contact us at:</p>
-        <p><strong>Email:</strong> [YOUR_EMAIL_ADDRESS]</p>
+        <p><strong>Email:</strong> motoharujap@gmail.com</p>
     </div>
 
     <p style="margin-top: 40px; text-align: center; color: #888;">
-        &copy; 2026 NyankittyWidget. All rights reserved.
+        &copy; 2026 Sergey Maslov All rights reserved.
     </p>
 </body>
 </html>
